--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#~1.0.5",
-    "paper-button": "PolymerElements/paper-button#~1.0.2"
+    "paper-button": "PolymerElements/paper-button#~1.0.2",
+    "paper-material": "PolymerElements/paper-material#~1.0.0"
   }
 }
